--- a/WeatherApp/WeatherApp.csproj
+++ b/WeatherApp/WeatherApp.csproj
@@ -47,6 +47,9 @@
 
 		<!-- Raw Assets (also remove the "Resources\Raw" prefix) -->
 		<MauiAsset Include="Resources\Raw\**" LogicalName="%(RecursiveDir)%(Filename)%(Extension)" />
+		<MauiFont Remove="Resources\Images\arrow.png" />
+		<MauiFont Remove="Resources\Images\delete.png" />
+		<MauiFont Remove="Resources\Images\menu.png" />
 		<MauiSplashScreen Include="Resources\Splash\splash_icon.svg" />
 	</ItemGroup>
 
@@ -59,6 +62,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Remove="Resources\Images\arrow.png" />
+	  <None Remove="Resources\Images\menu.png" />
 	  <None Remove="View\" />
 	  <None Remove="ViewModel\" />
 	  <None Remove="Resources\Images\" />
@@ -94,15 +99,17 @@
 	<ItemGroup>
 	  <Folder Include="View\" />
 	  <Folder Include="ViewModel\" />
-	  <Folder Include="Resources\Images\" />
 	  <Folder Include="Services\" />
 	  <Folder Include="Models\" />
 	</ItemGroup>
 	<ItemGroup>
 	  <MauiImage Include="Resources\Images\about.png" />
+	  <MauiImage Include="Resources\Images\arrow.png" />
+	  <MauiImage Include="Resources\Images\delete.png" />
 	  <MauiImage Include="Resources\Images\favourite.png" />
 	  <MauiImage Include="Resources\Images\home.png" />
 	  <MauiImage Include="Resources\Images\humidity.svg" />
+	  <MauiImage Include="Resources\Images\menu.png" />
 	  <MauiImage Include="Resources\Images\wind.svg" />
 	  <MauiImage Include="Resources\Images\barometer.svg" />
 	  <MauiImage Include="Resources\Images\sunrise.svg" />
