restyled home page

--- a/WeatherApp/WeatherApp.csproj
+++ b/WeatherApp/WeatherApp.csproj
@@ -50,6 +50,7 @@
 		<MauiFont Remove="Resources\Images\arrow.png" />
 		<MauiFont Remove="Resources\Images\delete.png" />
 		<MauiFont Remove="Resources\Images\menu.png" />
+		<MauiFont Remove="Resources\Images\sunny.png" />
 		<MauiSplashScreen Include="Resources\Splash\splash_icon.svg" />
 	</ItemGroup>
 
@@ -110,6 +111,7 @@
 	  <MauiImage Include="Resources\Images\home.png" />
 	  <MauiImage Include="Resources\Images\humidity.svg" />
 	  <MauiImage Include="Resources\Images\menu.png" />
+	  <MauiImage Include="Resources\Images\sunny.png" />
 	  <MauiImage Include="Resources\Images\wind.svg" />
 	  <MauiImage Include="Resources\Images\barometer.svg" />
 	  <MauiImage Include="Resources\Images\sunrise.svg" />
